Bug 517361 - Fontlist from Text Tool inoperable - console output: Could not execute addResourceVersionImpl statement QSqlError("2067", "Unable to fetch row", "UNIQUE constraint failed: ..."
Summary: Fontlist from Text Tool inoperable - console output: Could not execute addRes...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 6.0.0-beta3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-09 20:26 UTC by Andreas Sturmlechner
Modified: 2026-07-06 18:33 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
krita startup console output (7.52 KB, text/x-log)
2026-03-09 20:26 UTC, Andreas Sturmlechner
Details
Krita system information (11.41 KB, text/plain)
2026-03-09 20:27 UTC, Andreas Sturmlechner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Sturmlechner 2026-03-09 20:26:39 UTC
Created attachment 190515 [details]
krita startup console output

Basically, clicking on the font family or font style dropdowns does not make any list appear.

Attachment contains startup messages from console output.

See also downstream report originally filed by a user with beta2.
Comment 1 Andreas Sturmlechner 2026-03-09 20:27:19 UTC
Created attachment 190516 [details]
Krita system information
Comment 2 Ming Chuan 2026-03-10 03:23:06 UTC
Same here on NixOS
Comment 3 Ming Chuan 2026-03-10 03:25:15 UTC
In the chat room Wolthera mentioend that the text tool simply doesn't work with Qt6, maybe that's the case?

I tried 6.0.0-beta2 appimage, although it manages to show a dropdown list, when user try to click on the items in the list nothing happens
Comment 4 Tyrzi 2026-03-14 17:30:15 UTC
(In reply to Ming Chuan from comment #3)
> In the chat room Wolthera mentioend that the text tool simply doesn't work
> with Qt6, maybe that's the case?
> 
> I tried 6.0.0-beta2 appimage, although it manages to show a dropdown list,
> when user try to click on the items in the list nothing happens

yea I tried these font stuff on 5.3.0-beta1 and 6.0.0-beta3, and in 5.3.0 choosing the font works, tho it has awful scrolling where it launches the scrolling as you would swipe your finger fast on a smartphone's browsers, but 6.0.0 the font menu opens, but I can't select anything there. At least in 6.0.0 the scrolling works like it should.
Using arch linux with plasma wayland.
Comment 5 wolthera 2026-03-16 14:09:44 UTC
Hey,

I just fixed the very similar https://bugs.kde.org/show_bug.cgi?id=506086, can you test if this still happens?

Also, it seems that the bugfixes made by Carsten may have fixed the qml issue. At the least, I cannot reproduce it with a 6.0 appimage.
Comment 6 Andreas Sturmlechner 2026-03-16 18:38:33 UTC
Unfortunately no change here.
Comment 7 wolthera 2026-07-06 18:30:54 UTC
Git commit f9254b5d5a6c0fcc1ba5c6cf2fe8f92ffefb4715 by Wolthera van Hövell, on behalf of Wolthera van Hövell tot Westerflier.
Committed on 06/07/2026 at 18:30.
Pushed by woltherav into branch 'master'.

Try to deduplicate font family names better, so we don't get sql errors.

M  +55   -0    libs/flake/text/KoFFWWSConverter.cpp

https://invent.kde.org/graphics/krita/-/commit/f9254b5d5a6c0fcc1ba5c6cf2fe8f92ffefb4715
Comment 8 wolthera 2026-07-06 18:33:46 UTC
Git commit c1fe90e93d5fd712718f8fc33f0935c22873650a by Wolthera van Hövell tot Westerflier.
Committed on 06/07/2026 at 18:33.
Pushed by woltherav into branch 'krita/6.0'.

Try to deduplicate font family names better, so we don't get sql errors.

M  +55   -0    libs/flake/text/KoFFWWSConverter.cpp

https://invent.kde.org/graphics/krita/-/commit/c1fe90e93d5fd712718f8fc33f0935c22873650a