Try to deduplicate font family names better, so we don't get sql errors.

BUG:517361